mejora de principal card css

--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 
+<!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
+        rel="stylesheet">
+
+    <!-- Estilo propio -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-
     <main>
         <!-- profile principal -->
         <aside class="profile_top">
-            <div class="container">
-                <div class="main_profile">
+            <div class="container_principal">
+                <div class="main_profile_first">
                     <img class="profile_icon" src="./assets/img/maria.jpg" alt="">
                     <div class="text_main">
                         <h3>Maria</h3>
@@ -127,7 +134,6 @@
                 </div>
             </div>
 
-
             <!-- profile 9 -->
             <div class="container">
                 <div class="main_profile">
@@ -143,10 +149,10 @@
 
         <section class="principal_chat">
             <div class="containt_chat">
-            <img class="hand" src="./assets/img/hand.png" alt="">
-            <h2>Comienza el Nertworking</h2>
-            <p>Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas 
-                redes de contacto para tu empresa o emprendimiento.</p>
+                <img class="hand" src="./assets/img/hand.png" alt="">
+                <h2>Comienza el Nertworking</h2>
+                <p>Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas
+                    redes de contacto para tu empresa o emprendimiento.</p>
             </div>
         </section>
 
