--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 
-<!-- Google Font -->
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,7 +24,7 @@
             <div class="container_principal">
                 <div class="main_profile_first">
                     <img class="profile_icon" src="./assets/img/maria.jpg" alt="">
-                    <div class="text_main">
+                    <div class="text_main_principal ">
                         <h3>Maria</h3>
                         <p>Activa Ahora</p>
                     </div>
@@ -67,8 +67,6 @@
                 </div>
             </div>
 
-
-
             <!-- profile 4 -->
             <div class="container">
                 <div class="main_profile">
@@ -80,9 +78,7 @@
                     </div>
                 </div>
             </div>
-
-
-
+            
             <!-- profile 5 -->
             <div class="container">
                 <div class="main_profile">
